<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    tools:context="atividade.usjt.com.br.atividade1.controller.MainActivity">

    <EditText
        android:id="@+id/agencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/agencia"
        />
    <EditText
        android:id="@+id/conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conta"
        />
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logar"
        android:text="@string/acessar" />
</LinearLayout>
