<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="atividade.usjt.com.br.atividade1.controller.ExtratoActivity">

    <EditText
        android:id="@+id/dataDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dataDe"></EditText>

    <EditText
        android:id="@+id/dataAte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dataAte"></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buscarExtrato"
        android:text="@string/processar" />

</LinearLayout>
